# travel-planning-agent

./: .dockerignore  .env.example  .env.prerelease.example  .gitignore  DEPLOY_CHECKLIST.md  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.prerelease.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  cli.py
app/adapters/: __init__.py  fault_injection.py  tool_factory.py
app/agent/: graph.py  llm_factory.py  planner_core.py  planner_nlg.py  repair_strategies.py  state.py  (+2 more)
docs/: architecture_snapshot.md  dependency_fault_drill.md  eval_rubric.md  loadtest_runbook.md  observability_stack.md  persistence_governance.md  product_acceptance_checklist.md  rollout_runbook.md  runtime_runbook.md
eval/: __init__.py  beijing_4d_cny.py  cases.json  compare.py  release_gate.json  release_gate_runner.py  release_levels_cases.json  run.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
scripts/: dependency-fault-drill.ps1  loadtest-500.ps1  observability-down.ps1  observability-up.ps1  persistence-drill.ps1  prerelease-down.ps1  prerelease-local.ps1  prerelease-rollback.ps1  prerelease-rollout.ps1  prerelease.ps1  setup-wsl-docker-admin.ps1  slo-drill.ps1  slo-realtime-drill.ps1
tests/: conftest.py
tools/: __init__.py  check_import_boundaries.py  check_single_entrypoint.py  loadtest_http.py  product_acceptance.py  product_readiness.py  release_summary.py  slo_check.py
(+310 files in other folders)
